# opencv-portal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
